Adding Emergency Response System - Emergency Response - Emergency Response Signal Group

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3224,6 +3224,22 @@
         </tr>
         <tr>
           <td>
+            <dfn>A.1.9
+              - A.1.9 - A4 - Emergency Response System - Emergency Response - Emergency Response Signal Group</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Emergency Response Signal Group</td>
+          <td>Core</td>
+          <td>A unique Signal “Emergency Response” Group will be used for all incident response coordination.
+            TechOps will create the Signal Group and assign its administrators. The Support Facilitators and 
+            the Protocol Security Workstream Lead shall manage access to the Signal Group. All Emergency Response 
+            Members must be added to the Group. Where an Emergency Response Group Member is a team, the two (2) 
+            team members responsible for incident response are required to join the Signal Group. The Signal Group 
+            should not be used for any purpose except communications concerning a potential emergency situation. 
+            The Group must be configured to have a four-week message retention.
+        </td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.1.11
               - A1 - Weekly Governance Cycle - Operational Weekly Cycle</dfn>
           </td>
