Adding Emergency Response System - Emergency Response - Emergency Contact Mechanism Selection Criteria

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3240,6 +3240,21 @@
         </tr>
         <tr>
           <td>
+            <dfn>A.1.9
+              - A.1.9 - A4 - Emergency Response System - Emergency Response - Emergency Contact Mechanism Selection Criteria</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Emergency Contact Mechanism Selection Criteria</td>
+          <td>Core</td>
+          <td>A suitable emergency contact mechanism should meet the following criteria:<br> - The mechanism should use enterprise 
+            grade infrastructure with correspondingly high levels of uptime.<br> - The mechanism should not require personal 
+            information or KYC from users.<br> - The mechanism should allow segmenting of target user groups, so that required 
+            individuals are only notified when necessary.<br> - The mechanism should be able to bypass silent / do not disturb 
+            mode on devices to achieve an immediate response any time of day.<br> - It is recommended, but not required, that the 
+            mechanism minimizes data tracking of individual users.<br> It is recommended, but not required, that the mechanism is open source.
+        </td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.1.11
               - A1 - Weekly Governance Cycle - Operational Weekly Cycle</dfn>
           </td>
