Adding Emergency Response System - Emergency Response - Changes To Approved Emergency Contact Mechanisms

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3263,6 +3263,18 @@
           <td>The currently approved emergency contact mechanism is PagerDuty.
         </td>
         </tr>
+          <tr>
+          <td>
+            <dfn>A.1.9
+              - A.1.9 - A4 - Emergency Response System - Emergency Response - Changes To Approved Emergency Contact Mechanisms</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Changes To Approved Emergency Contact Mechanisms</td>
+          <td>Core</td>
+          <td>he Governance Facilitators may recommend changing the approved emergency contact mechanism specified in A.1.8 - Emergency Response 
+            System - Emergency Response - Approved Emergency Contact Mechanisms, but they must do so in consultation with the Protocol Security 
+            Workstream Lead. The Governance Facilitators’ recommendation is subject to a poll through the Operational Weekly Governance Cycle.
+        </td>
+        </tr>
         <tr>
           <td>
             <dfn>A.1.11
