Adding Emergency Response System - Emergency Response - Emergency Contact Mechanism Fire Drills

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3270,9 +3270,21 @@
           </td>
           <td>Emergency Response System - Emergency Response - Changes To Approved Emergency Contact Mechanisms</td>
           <td>Core</td>
-          <td>he Governance Facilitators may recommend changing the approved emergency contact mechanism specified in A.1.8 - Emergency Response 
+          <td>The Governance Facilitators may recommend changing the approved emergency contact mechanism specified in A.1.8 - Emergency Response 
             System - Emergency Response - Approved Emergency Contact Mechanisms, but they must do so in consultation with the Protocol Security 
             Workstream Lead. The Governance Facilitators’ recommendation is subject to a poll through the Operational Weekly Governance Cycle.
+        </td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.1.9
+              - A.1.9 - A4 - Emergency Response System - Emergency Response - Emergency Contact Mechanism Fire Drills</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Emergency Contact Mechanism Fire Drills</td>
+          <td>Core</td>
+          <td>The Protocol Security Workstream Lead and Governance Facilitators may run fire drills to test the preparedness of individuals 
+            that have been added to the emergency contact mechanism. This will be done at the discretion of the Protocol Security Workstream 
+            Lead and Governance Facilitators. The results of fire drills shall be published to maintain transparency.
         </td>
         </tr>
         <tr>
