--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2077,10 +2077,10 @@
         <tr>
           <td>
             <dfn>A.1.5
-              - Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget - 
+              - Aligned Delegates - Budget And Participation Requirements - 
               Payout Limitations For ADs Triggering Atlas Edit Weekly Cycle Proposals</dfn>
           </td>
-          <td>Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget - Payout Limitations 
+          <td>Aligned Delegates - Budget And Participation Requirements - Payout Limitations 
             For ADs Triggering Atlas Edit Weekly Cycle Proposals</td>
           <td>Core</td>
           <td>If an AD has triggered an Atlas Edit Weekly Cycle Proposal pursuant to <dfn>A.1.11 - Weekly Governance Cycle - Atlas Edit 
@@ -3036,11 +3036,9 @@
         <tr>
           <td>
             <dfn>A.1.9
-              - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-              SparkLend - SparkLend Multisig Usage Standards</dfn>
+              - Sky Core Governance Security - Governance Security Culture And Research - SparkLend Multisig Usage Standards</dfn>
           </td>
-          <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-            SparkLend - SparkLend Multisig Usage Standards</td>
+          <td>Sky Core Governance Security - Governance Security Culture And Research - SparkLend Multisig Usage Standards</td>
           <td>Core</td>
           <td>
             The SparkLend Security Access Multisig can only be used in urgent or emergency situations (e.g., 
@@ -3058,10 +3056,10 @@
           <td>
             <dfn>A.1.9
               - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-              SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Number Of Signers</dfn>
+              SparkLend - SparkLend Multisig Number Of Signers</dfn>
           </td>
           <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-            SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Number Of Signers</td>
+            SparkLend - SparkLend Multisig Number Of Signers</td>
           <td>Core</td>
           <td>
             The SparkLend Security Access Multisig currently has a 2/5 signing requirement.
@@ -3070,10 +3068,10 @@
           <td>
             <dfn>A.1.9
               - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-              SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Current Signers</dfn>
+              SparkLend - SparkLend Multisig Current Signers</dfn>
           </td>
           <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-            SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Current Signers</td>
+            SparkLend - SparkLend Multisig Current Signers</td>
           <td>Core</td>
           <td>
             The SparkLend Security Access Multisig currently has the following signers:• VoteWizard• LDR• Hexonaut• MonetSupply• Rema
@@ -3082,10 +3080,10 @@
           <td>
             <dfn>A.1.9
               - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-              SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Signer Modifications</dfn>
+              SparkLend - SparkLend Multisig Signer Modifications</dfn>
           </td>
           <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-            SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Signer Modifications</td>
+            SparkLend - SparkLend Multisig Signer Modifications</td>
           <td>Core</td>
           <td>
             Modification of the signers of the SparkLend Security Access Multisig must be approved through a Governance 
@@ -3102,10 +3100,10 @@
           <td>
             <dfn>A.1.9
               - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-              SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Address</dfn>
+              SparkLend - SparkLend Multisig Address</dfn>
           </td>
           <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-            SparkLend - SparkLend Multisig Usage Standards - SparkLend Multisig Address</td>
+            SparkLend - SparkLend Multisig Address</td>
           <td>Core</td>
           <td>
             The current whitelisted SparkLend Security Access Multisig address is:<br> 0x44efFc473e81632B12486866AA1678edbb7BEeC3
@@ -7626,9 +7624,9 @@
         <tr>
           <td>
             <dfn>A.3.9
-              - Measures For Endgame Transition - Native Vault Engine - Collateral Offboarding - Collateral Offboarding Process</dfn>
+              - Measures For Endgame Transition - Native Vault Engine - Collateral Offboarding Process</dfn>
           </td>
-          <td>Measures For Endgame Transition - Native Vault Engine - Collateral Offboarding - Collateral Offboarding Process</td>
+          <td>Measures For Endgame Transition - Native Vault Engine - Collateral Offboarding Process</td>
           <td>Core</td>
           <td>The Stability Facilitators, in consultation with the Stability Scope Advisors, must use the Operational Weekly Cycle to 
             offboard Native Vault Engine collateral pursuant to A.3.9 - Measures For Endgame Transition - Native Vault Engine - 
@@ -10380,19 +10378,6 @@
         </tr>
         <tr>
           <td>
-            <dfn>Kick
-              - Element Annotation</dfn>
-          </td>
-          <td>Kick - Element Annotation</td>
-          <td>Annotation</td>
-          <td>A kick is an operation that is triggered periodically by the DssFlapper contract. Each operation
-            withdraws Dai from the surplus buffer and uses that Dai to buy MKR on Uniswap v2. The MKR, along
-            with a proportionate amount of additional Dai withdrawn from the surplus buffer, are deposited back
-            into the Uniswap v2 liquidity pool in exchange for LP tokens. The LP tokens are then sent to the
-            receiver address in the DssFlapper contract.</td>
-        </tr>
-        <tr>
-          <td>
             <dfn>Methodologies
               - Element Annotation</dfn>
           </td>
@@ -10523,19 +10508,6 @@
             as possible in achieving their goal of stabilizing the USDS Stablecoin. The element "aligning"
             refers to ensuring that these parameters are consistent and work in harmony with the objectives of
             Sky and with each other to prevent conflicts or discrepancies that could undermine stability.</td>
-        </tr>
-        <tr>
-          <td>
-            <dfn>Oracle
-              - Element Annotation</dfn>
-          </td>
-          <td>Oracle - Element Annotation</td>
-          <td>Annotation</td>
-          <td>An "oracle" is an onchain source of truth regarding some data. Most commonly in the case of Sky, a
-            price oracle will serve as the onchain source of truth for pricing data regarding collateral or
-            other assets. Since onchain computations must be deterministic, oracles must publish this data
-            onchain and must be subject to cryptoeconomic guarantees to allow other actors to rely on the data
-            they provide.</td>
         </tr>
         <tr>
           <td>
@@ -10797,20 +10769,6 @@
             <strong><dfn>Executive
                 Sheet - Element Annotation</dfn></strong>.
           </td>
-        </tr>
-        <tr>
-          <td>
-            <dfn>Univ2
-              MKR/Dai LP Token - Element Annotation</dfn>
-          </td>
-          <td>Univ2 MKR/Dai LP Token - Element Annotation</td>
-          <td>Annotation</td>
-          <td>"Univ2 MKR/Dai LP Token" refers to a Liquidity Provider token in the MKR/Dai pool on Uniswap v2.
-            Decentralized exchanges typically use liquidity pools rather than order books to minimize
-            transaction costs. A liquidity pool contains a combination of two tokens, in this case MKR and Dai,
-            and allows users to permissionlessly swap assets in the pool at the current market price. Liquidity
-            Providers provide assets to the pool and in exchange receive a share of the trading fees from the
-            pool.</td>
         </tr>
         <tr>
           <td>
