facilitator selection process

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2352,8 +2352,7 @@
           </td>
           <td>Facilitators - Appointment of Facilitators</td>
           <td>Core</td>
-          <td>Before the Launch of Stars, Sky Governance directly chooses the Facilitators that are responsible
-            for each of the Scopes.</td>
+          <td>Sky Governance appoints the Facilitators that are responsible for each of the Scopes.</td>
         </tr>
         <tr>
           <td>
