--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3054,11 +3054,9 @@
         <tr>
           <td>
             <dfn>A.1.9
-              - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-              SparkLend - SparkLend Multisig Number Of Signers</dfn>
+              - Sky Core Governance Security - Governance Security Culture And Research - SparkLend Multisig Number Of Signers</dfn>
           </td>
-          <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-            SparkLend - SparkLend Multisig Number Of Signers</td>
+          <td>Sky Core Governance Security - Governance Security Culture And Research - SparkLend Multisig Number Of Signers</td>
           <td>Core</td>
           <td>
             The SparkLend Security Access Multisig currently has a 2/5 signing requirement.
@@ -3066,11 +3064,9 @@
         <tr>
           <td>
             <dfn>A.1.9
-              - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-              SparkLend - SparkLend Multisig Current Signers</dfn>
+              - Sky Core Governance Security - Governance Security Culture And Research - SparkLend Multisig Current Signers</dfn>
           </td>
-          <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-            SparkLend - SparkLend Multisig Current Signers</td>
+          <td>Sky Core Governance Security - Governance Security Culture And Research - SparkLend Multisig Current Signers</td>
           <td>Core</td>
           <td>
             The SparkLend Security Access Multisig currently has the following signers:• VoteWizard• LDR• Hexonaut• MonetSupply• Rema
@@ -3078,11 +3074,9 @@
          <tr>
           <td>
             <dfn>A.1.9
-              - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-              SparkLend - SparkLend Multisig Signer Modifications</dfn>
+              - Sky Core Governance Security - Governance Security Culture And Research - SparkLend Multisig Signer Modifications</dfn>
           </td>
-          <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-            SparkLend - SparkLend Multisig Signer Modifications</td>
+          <td>Sky Core Governance Security - Governance Security Culture And Research - SparkLend Multisig Signer Modifications</td>
           <td>Core</td>
           <td>
             Modification of the signers of the SparkLend Security Access Multisig must be approved through a Governance 
@@ -3098,11 +3092,9 @@
         <tr>
           <td>
             <dfn>A.1.9
-              - Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-              SparkLend - SparkLend Multisig Address</dfn>
+              - Sky Core Governance Security - Governance Security Culture And Research - SparkLend Multisig Address</dfn>
           </td>
-          <td>Sky Core Governance Security - Governance Security Culture And Research - Multisig Freeze Of
-            SparkLend - SparkLend Multisig Address</td>
+          <td>Sky Core Governance Security - Governance Security Culture And Research - SparkLend Multisig Address</td>
           <td>Core</td>
           <td>
             The current whitelisted SparkLend Security Access Multisig address is:<br> 0x44efFc473e81632B12486866AA1678edbb7BEeC3
