--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -7047,8 +7047,47 @@
         </tr>
         <tr>
           <td>
+            <dfn>A.3.5 - A1 - Surplus Buffer And Smart Burn Engine - Surplus Buffer</dfn>
+          </td>
+          <td>Surplus Buffer And Smart Burn Engine - Surplus Buffer</td>
+          <td>Section</td>
+          <td>The Surplus Buffer is the difference between Sky’s assets and liabilities. Protocol revenue increases the Surplus Buffer and 
+              expenses decrease the Surplus Buffer.
+          </td>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.5 - Surplus Buffer And Smart Burn Engine - Surplus Buffer - Current Implementation</dfn>
+          </td>
+          <td>Surplus Buffer And Smart Burn Engine - Surplus Buffer - Current Implementation</td>
+          <td>Core</td>
+          <td>The current implementation of the Surplus Buffer is the Vow contract deployed on the Ethereum Mainnet at 
+              0xa950524441892a31ebddf91d3ceefa04bf454466.
+          </td>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.5 - Surplus Buffer And Smart Burn Engine - Surplus Buffer - Current Value</dfn>
+          </td>
+          <td>Surplus Buffer And Smart Burn Engine - Surplus Buffer - Current Value</td>
+          <td>Core</td>
+          <td>The current value of the Surplus Buffer can be calculated using the Vat contract, Sky’s central accounting contract, located 
+              on the Ethereum Mainnet at 0x35d1b3f3d7966a1dfe207aa4514c12a259a0492b. The current value of the Surplus Buffer is the 
+              difference between:
+                1. The assets of the Vow contract obtained by calling the dai function on the Vat contract with the address of the Vow 
+                contract, and
+                2. The liabilities of the Vow contract obtained by calling the sin function on the Vat contract with the address of the 
+                Vow contract.
+            
+          </td>
+          </td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.3.5
-              - A1 - Surplus Buffer And Smart Burn Engine - Surplus Buffer Splitter Parameters</dfn>
+              - A2 - Surplus Buffer And Smart Burn Engine - Surplus Buffer Splitter Parameters</dfn>
           </td>
           <td>Surplus Buffer And Smart Burn Engine - Surplus Buffer Splitter Parameters</td>
           <td>Section</td>
