fix capitalization of title

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2348,9 +2348,9 @@
         <tr>
           <td>
             <dfn>A.1.6
-              - Facilitators - Appointment of Facilitators</dfn>
+              - Facilitators - Appointment Of Facilitators</dfn>
           </td>
-          <td>Facilitators - Appointment of Facilitators</td>
+          <td>Facilitators - Appointment Of Facilitators</td>
           <td>Core</td>
           <td>Sky Governance appoints the Facilitators that are responsible for each of the Scopes.</td>
         </tr>
