Updating Emergency Response System - Emergency Response

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2746,7 +2746,8 @@
           <td>Section</td>
           <td>The Sky Protocol has often required changes outside of the standard Weekly Governance Cycle and Monthly 
             Governance Cycle to help maintain the peg or to quickly respond to changes in the Ecosystem. This Section 
-            defines a general protocol for handling emergency or urgent situations.</td>
+            defines a general protocol for handling emergency or urgent situations. A.1.9 - A4 - Sky Core Governance Security - 
+            Emergency Spells governs the resolution of emergency / urgent situations involving the Executive Process.</td>
         </tr>
         <tr>
           <td>
