debt writeoff timelock parameter

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -8010,8 +8010,18 @@
           </td>
           <td>Measures For Endgame Transition - Spark Dai Direct Deposit Module - Buffer Definition</td>
           <td>Core</td>
-          <td>buf is a fixed-sized amount of pre-minted Dai which the Spark Dai Direct Deposit Module is designed
+          <td>buffer is a fixed-sized amount of pre-minted Dai which the Spark Dai Direct Deposit Module is designed
             to maintain in most instances.</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.9
+              - Measures For Endgame Transition - Spark Dai Direct Deposit Module - Debt Write Off Timelock Definition</dfn>
+          </td>
+          <td>Measures For Endgame Transition - Spark Dai Direct Deposit Module - Debt Write Off Timelock Definition</td>
+          <td>Core</td>
+          <td>tau is the timelock required before bad debt can be written off after the Spark Dai Direct Deposit Module has been shut 
+              down, expressed in seconds.</td>
         </tr>
         <tr>
           <td>
@@ -8021,7 +8031,7 @@
           <td>Measures For Endgame Transition - Spark Dai Direct Deposit Module - Current Configuration</td>
           <td>Core</td>
           <td>The current parameters of the Spark Dai Direct Deposit Module are:• gap: 40 million Dai• ttl: 24
-            hours• max: 1.5 billion Dai• buffer: 50 million Dai</td>
+            hours• max: 2.5 billion Dai• buffer: 100 million Dai• tau: 7 days</td>
         </tr>
         <tr>
           <td>
